Fixed css width for checkbox, increased a bit to prevent text wrap.

--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,7 @@ input[type="checkbox"] + label {
   margin: 0.2em;
   cursor: pointer;
   padding: 0.2em;
-  max-width: 15rem;
+  max-width: 20rem;
 }
 
 input[type="checkbox"] {
